@@ -355,6 +355,7 @@ $config = Zend_Registry::get('config');
 	<script src="js/toggle-content.js"></script>
 	<script src="js/permissionpanel.js"></script>
 	<script src="js/memberpanel.js"></script>
+	<script src="js/anker.js"></script>
     <!-- <script src="http://tablesorter.com/__jquery.tablesorter.min.js"></script> -->
     </body>
 </html>
